# clibs

./: .gitignore  CMakeLists.txt  README.md  log.h  stringstruct.h
include/: log.h  stringstruct.h
src/: log.c  stringstruct.c
